[package]
name = "worldcoin-hubble-commander"
version = "0.1.0"
authors = ["Dmytro Maretskyi <maretskii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amcl = "0.2.0"
web3 = "0.14.0"
anyhow = "1.0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
hex-literal = "0.3"
