[package]
name = "worldcoin-hubble-commander"
version = "0.1.0"
authors = ["Dmytro Maretskyi <maretskii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amcl = "0.2.0"
web3 = { version = "0.15.0", features = ["signing"] }
anyhow = "1.0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
hex-literal = "0.3"
tokio = { version = "0.2", features = ["full"] }
secp256k1 = "0.20.1"
hex = "0.4.2"
rlp = "0.5"
